memperbaiki bug overflow hidden pada body

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,7 +158,7 @@ html .roboto {
 .hero-content :is(.title, .subtitle, .learn-more) {
   position: relative;
   z-index: 2;
-  animation: myFadeRight 2s ease;
+  animation: myFadeRight 2s cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 .hero-content :is(.title, .subtitle) {
   line-height: 1.2;
@@ -610,11 +610,11 @@ section.space-y {
 
 @keyframes myNav {
   from {
-    transform: translateY(-100%) scale(0);
+    transform: scale(0);
     opacity: 0;
   }
   to {
-    transform: translateY(0) scale(1);
+    transform: scale(1);
     opacity: 1;
   }
 }
